# python-aiodi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  pyproject.toml  pyscript.sh  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  pipeline.yml
aiodi/: __init__.py  builder.py  container.py  helpers.py  logger.py  toml.py
aiodi/resolver/: __init__.py  loader.py  path.py  service.py  variable.py
docs/: 404.html  index.html  sitemap.xml
docs/en/: index.html
docs/es/: index.html
docs/search/: search_index.json
docs_src/: mkdocs.yml
docs_src/config/en/: mkdocs.yml
docs_src/config/es/: mkdocs.yml
docs_src/docs/: index.md
docs_src/docs/en/: index.md
docs_src/docs/es/: index.md
multcasts/: pyproject.toml
multcasts/apps/: settings.py
multcasts/apps/cli/: main.py
sample/: main.py  pyproject.toml  utils.py
sample/apps/: settings.py
sample/apps/cli/: main.py
sample/blabla/: log.py
sample/blabla/dedede/: __init__.py
sample/libs/: utils.py
sample/libs/Net/: networking.py
sample/libs/users/: from-user.py
sample/libs/users/application/: create-user-service.py  delete-user-service.py  finder_service.py  register_service.py
sample/libs/users/domain/: aggregates.py  properties.py  repositories.py
sample/libs/users/infra/: my-command.py  mysuper-command.py  pelota.py  something.py
sample/libs/users/infra/subinfra/: rabbtmq.py
sample/libs/users/infrastructure/: find_user_command.py  in_memory_user_logger.py  in_memory_user_repository.py  register_user_command.py
tests/: conftest.py
tests/integration/aiodi/: test_builder.py
tests/unit/aiodi/: test_container.py
var/: pyproject.toml
