[metadata]
name = "aiodi"
version = "1.1.1"
description = "Container for the Dependency Injection in Python."
license = "MIT"
authors = ["ticdenis <denisnavarroalcaide@outlook.es>"]
readme = "README.md"
repository = "https://github.com/ticdenis/python-aiodi"
documentation = "https://ticdenis.github.io/python-aiodi/"
keywords = ["di", "dependency", "container", "aio", "async"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
include = ["LICENSE", "README.md"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==59.6.0", "wheel==0.37.1"]

[tool.black]
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.liccheck]
authorized_licenses = ["MIT", "BSD", "PSF", "Python Software Foundation", "Apache License 2.0", "Apache Software", "LGPL", "Mozilla Public License 2.0 (MPL 2.0)", "MPL 2.0", "GPL", "GNU General Public License (GPL)", "GNU Lesser General Public License v2 (LGPLv2)", "Public Domain", "GNU General Public License v2 (GPLv2)", "GNU Library or Lesser General Public License (LGPL)"]
unauthorized_licenses = []
[tool.liccheck.authorized_packages]
uuid = "1.30"

[tool.pylint.master]
jobs = "0"
[tool.pylint.messages_control]
disable = "C0103,C0114,C0115,C0116,C0201,C0205,C0209,C0301,C0415,E1102,E0401,E0611,E0711,E1136,R0201,R0902,R0903,R0912,R0914,R1704,R1717,R1725,W0102,W0108,W0212,W0235,W0236,W0603,W0611,W0622,W0703,W0707,W1202"

[tool.pytest.ini_options]
cache_dir = "var/cache/.pytest_cache"
addopts = "-q -n auto -p no:warnings --no-cov-on-fail"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36
isolated_build = True
toxworkdir = var/tox
skipsdist = True

[testenv]
deps = -r requirements-dev.txt
"""
